# input-monitor

./: README.md  input-monitor.py  pyproject.toml
.github/workflows/: build-windows-release.yml  python-publish.yml
input_monitor/: __init__.py  __main__.py  app.py
packaging/windows/: build_windows_exe.bat  entry_point.py  input-monitor.spec
