[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "input-monitor"
dynamic = ["version"]

description = "An on-screen input & mouse tracker widget"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{name = "jabezwinston", email = "jabezwinston@gmail.com"}]
requires-python = ">=3.8"
keywords = ["input", "monitor", "widget", "mouse", "keyboard"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "pynput>=1.7",
    "keyboard>=0.13"
]

[project.urls]
Homepage = "https://github.com/zion-school/input-monitor"

[tool.setuptools]
packages = ["input_monitor"]
include-package-data = true

[tool.setuptools.package-data]
"input_monitor" = ["images/*"]

[tool.setuptools.dynamic]
version = { attr = "input_monitor.version.VERSION" }

[project.scripts]
"input-monitor" = "input_monitor.app:main"
